Fixed spacing of sidebar icons.

--- a/app/assets/stylesheets/custom.scss
+++ b/app/assets/stylesheets/custom.scss
@@ -446,13 +446,13 @@ p#searchButton{
 }
 
 .fa-home{
-	font-size: 24px !important;
-	margin-right: 16px;
+	font-size: 20px !important;
+	margin-right: 15px;
 }
 
 .fa-line-chart{
-	font-size: 20px !important;
-	margin-right: 15px;
+	font-size: 21px !important;
+	margin-right: 17px;
 }
 
 .fa-random{
@@ -466,23 +466,23 @@ p#searchButton{
 }
 
 .fa-smile-o{
-	font-size: 26px !important;
-	margin-right: 16px;
+	font-size: 22px !important;
+	margin-right: 17px;
 }
 
 .fa-gamepad{
-	font-size: 22px !important;
-	margin-right: 14px;
+	font-size: 20px !important;
+	margin-right: 13px;
 }
 
 .fa-music{
-	font-size: 26px !important;
+	font-size: 22px !important;
 	margin-right: 16px;
 }
 
 .fa-camera{
 	font-size: 21px !important;
-	margin-right: 15px;
+	margin-right: 17px;
 }
 
 .fa-exclamation{
@@ -493,13 +493,13 @@ p#searchButton{
 
 .fa-utensils{
 	font-size: 22px !important;
-	margin-left: 4px;
+	margin-left: 3px;
 	margin-right: 17px;
 }
 
 .fa-paw{
 	font-size: 24px !important;
-	margin-right: 16px;
+	margin-right: 14px;
 }
 
 .fa-newspaper-o{
@@ -510,7 +510,7 @@ p#searchButton{
 .fa-question{
 	font-size: 22px !important;
 	margin-left: 4px;
-	margin-right: 21px;
+	margin-right: 17px;
 }
 
 .fa-dumbbell{
